--- a/design.ui
+++ b/design.ui
@@ -33,9 +33,16 @@
        <layout class="QGridLayout" name="gridLayout_6">
         <item row="0" column="0">
          <widget class="QWidget" name="empTab" native="true">
-          <layout class="QGridLayout" name="gridLayout">
+          <layout class="QGridLayout" name="gridLayout_4">
            <item row="0" column="0">
-            <widget class="QTableWidget" name="employeesTable"/>
+            <widget class="QTableWidget" name="employeesTable">
+             <property name="horizontalScrollBarPolicy">
+              <enum>Qt::ScrollBarAsNeeded</enum>
+             </property>
+             <property name="sizeAdjustPolicy">
+              <enum>QAbstractScrollArea::AdjustToContents</enum>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -51,7 +58,11 @@
          <widget class="QWidget" name="schTab" native="true">
           <layout class="QGridLayout" name="gridLayout_3">
            <item row="0" column="0">
-            <widget class="QTableWidget" name="scheduleTable"/>
+            <widget class="QTableWidget" name="scheduleTable">
+             <property name="sizeAdjustPolicy">
+              <enum>QAbstractScrollArea::AdjustToContents</enum>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -65,9 +76,13 @@
        <layout class="QGridLayout" name="gridLayout_8">
         <item row="0" column="0">
          <widget class="QWidget" name="payTab" native="true">
-          <layout class="QGridLayout" name="gridLayout_4">
+          <layout class="QGridLayout" name="gridLayout">
            <item row="0" column="0">
-            <widget class="QTableWidget" name="paymentsTable"/>
+            <widget class="QTableWidget" name="paymentsTable">
+             <property name="sizeAdjustPolicy">
+              <enum>QAbstractScrollArea::AdjustToContents</enum>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -83,7 +98,11 @@
          <widget class="QWidget" name="posTab" native="true">
           <layout class="QGridLayout" name="gridLayout_5">
            <item row="0" column="0">
-            <widget class="QTableWidget" name="positionsTable"/>
+            <widget class="QTableWidget" name="positionsTable">
+             <property name="sizeAdjustPolicy">
+              <enum>QAbstractScrollArea::AdjustToContents</enum>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -95,6 +114,9 @@
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -104,7 +126,11 @@
     </rect>
    </property>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
